Fix - Align buttons horizontally

--- a/src/components/HomePage/styles.module.css
+++ b/src/components/HomePage/styles.module.css
@@ -57,7 +57,6 @@
 }
 
 .button:hover {
-	background-color: #773dff;
 	transform: scale(1.05);
 	text-decoration: none;
 	color: white;
